GUI

Added First Run wizard

Major rewrite of AJAX data <-> vboxwebsrv back-end interaction

PHP session support is no longer required and AJAX requests should
be a little more responsive

Fixed bug that would not save DHCP server settings of host-only
network interfaces

Fixed bug in Clone Virtual Machine wizard that would not create a
full clone when in 'Expert' (Hide Description) mode

-------------------------------------
	4.2-3b	2012-10-21
-------------------------------------
Fixed error when detaching a VM console window
http://code.google.com/p/phpvirtualbox/issues/detail?id=613

-------------------------------------
	4.2-3	2012-10-21
-------------------------------------
Fixed line endings in vboxinit
http://code.google.com/p/phpvirtualbox/issues/detail?id=606

Fixed VM state change updates that did not update menus and
toolbars

Fixed bug that would hide the Remote Display tab in VM settings
while a VM is running

Fixed Preview section update bug that would not update the preview
window at the selected interval

Removed obsolete configuration items from config.php-example

Fixed UI updating of UI components when a VM is added or removed
from a selected group or its subgroups 

Added PHP version check

Better error handling when the VirtualBox event listener fails

Menu bug that would not always trigger an action when a menu item
was clicked

Added check for PHP LDAP extension in LDAP authentication module

Added Active Directory authentication module 

Fixed bug in Virtual Media Manager that would fail to properly
refresh media

Fixed permission errors that would enforce VM ownership actions
even when $enforceVMOwnership was not enabled in config.php

Changing servers while an operation is in progress is no longer
allowed as it causes progress operations to fail

Preview screen is now a hardware accelerated HTML5 canvas if
supported by the browser

Improved support for older browsers (IE 8, FF 3.6, Opera 10)
