@@ -40,7 +40,7 @@ vboxChooser.setContextMenu('group', [
 	$.extend({},vboxVMActions['start'],{'name':'start','separator' : true}),
     $.extend({},vboxVMActions['pause'],{'name':'pause'}),
     $.extend({},vboxVMActions['reset'],{'name':'reset'}),
-	$.extend({},vboxVMActions['stop'],{'name':'stop','icon':'exit','children':sChildren}),
+	$.extend({},vboxVMActions['stop'],{'name':'stop','children':sChildren}),
 	$.extend({},vboxVMActions['discard'],{'name':'discard','separator' : true}),
 	$.extend({},vboxVMActions['refresh'],{'name':'refresh'}),
 	$.extend({}, vboxVMGroupActions['sort'], {name:'sort',separator:true}),
@@ -58,7 +58,7 @@ vboxChooser.setContextMenu('vm',[
 	$.extend({},vboxVMActions['start'],{'name':'start','separator' : true}),
     $.extend({},vboxVMActions['pause'],{'name':'pause'}),
     $.extend({},vboxVMActions['reset'],{'name':'reset'}),
-	$.extend({},vboxVMActions['stop'],{'name':'stop','icon':'exit','children':sChildren}),
+	$.extend({},vboxVMActions['stop'],{'name':'stop','children':sChildren}),
 	$.extend({},vboxVMActions['discard'],{'name':'discard','separator' : true}),
 	$.extend({},vboxVMActions['logs'],{'name':'logs'}),
 	$.extend({},vboxVMActions['refresh'],{'name':'refresh'})
